--- a/estilo/style.css
+++ b/estilo/style.css
@@ -10,8 +10,8 @@ header {
 background-color: black;
 color: white;
 margin: auto;
-width: 350px;
 padding: 20px;
+width: 89vw;
 }
 
 header > h1 {
@@ -62,7 +62,7 @@ main {
  background-color: white;
  margin: auto;
  margin-top: 15px;
- width: 350px;
+ width: 89vw;
  padding: 20px;
  border-radius: 20px;
  line-height: 1.5em;
